--- a/index.html
+++ b/index.html
@@ -70,6 +70,16 @@
           <div data-aos="zoom-out">
             <h1>Trải nghiệm ô tô thông minh cùng với <span>OnRoad</span></h1>
             <h2>Ứng dụng hỗ trợ quản lý, giám sát, cứu hộ, cứu nạn xe ô tô cá nhân mang đến cho bạn những chuyến đi tốt hơn, an toàn hơn</h2>
+            <div class="text-center text-lg-start">
+              <a href='https://apps.apple.com/us/app/onroad-vt/id1555423089'>
+                <img style="height: 8vh;" alt='Tải nội dung trên Apple Store' 
+                    src='assets/img/latest.png'/>
+              </a>
+              <a href='https://play.google.com/store/apps/details?id=com.vtnet.onroad.carmanagement&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+                <img style="height: 8vh;" alt='Tải nội dung trên Google Play' 
+                    src='assets/img/googlepay_latest.png'/>
+              </a>
+            </div>
           </div>
         </div>
         <div class="col-lg-4 order-1 order-lg-2 hero-img" data-aos="zoom-out" data-aos-delay="300">
