--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/onroad-log.ico" rel="icon">
-  <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="assets/img/onroad-log.ico" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
@@ -72,11 +72,11 @@
             <h2>Ứng dụng hỗ trợ quản lý, giám sát, cứu hộ, cứu nạn xe ô tô cá nhân mang đến cho bạn những chuyến đi tốt hơn, an toàn hơn</h2>
             <div class="text-center text-lg-start">
               <a href='https://apps.apple.com/us/app/onroad-vt/id1555423089'>
-                <img style="height: 8vh;" alt='Tải nội dung trên Apple Store' 
+                <img style="height: 7vh;" alt='Tải nội dung trên Apple Store' 
                     src='assets/img/latest.png'/>
               </a>
               <a href='https://play.google.com/store/apps/details?id=com.vtnet.onroad.carmanagement&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
-                <img style="height: 8vh;" alt='Tải nội dung trên Google Play' 
+                <img style="height: 7vh;" alt='Tải nội dung trên Google Play' 
                     src='assets/img/googlepay_latest.png'/>
               </a>
             </div>
