Test display icon in cell

--- a/index.html
+++ b/index.html
@@ -484,6 +484,15 @@
           { "data": "rd", "title": "Mã lỗi DTC"},
           { "data": "c", "title": "Tương thích"}
       ],
+      "columnDefs": [
+          {
+            "targets": 3,
+            "render": function ( data, type, row, meta ) {
+              if (data) return '<i class="ri-gradienter-line" style="color: #11dbcf;"></i>'
+              else return '<i class="ri-close-line"></i>'
+            }
+          }
+      ],
       "language": {
           "lengthMenu": "Hiển thị _MENU_ mỗi trang",
           "zeroRecords": "Không tìm thấy xe phù hợp",
