Test display icon in cell

--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
           {
             "targets": 3,
             "render": function ( data, type, row, meta ) {
-              if (data) return '<i class="ri-gradienter-line" style="color: #11dbcf;"></i>'
+              console.log(data);
+              if (data) return '<i class="ri-check-line" style="color: #2a7837;"></i>'
               else return '<i class="ri-close-line"></i>'
             }
           }
