--- a/index.html
+++ b/index.html
@@ -487,6 +487,7 @@
       "columnDefs": [
           {
             "targets": 3,
+            "className": "text-center",
             "render": function ( data, type, row, meta ) {
               console.log(data);
               if (data) return '<i class="ri-check-line" style="color: #2a7837;"></i>'
