Test display icon in cell

--- a/index.html
+++ b/index.html
@@ -489,9 +489,99 @@
             "targets": 3,
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
-              console.log(data);
-              if (data) return '<i class="ri-check-line" style="color: #2a7837;"></i>'
-              else return '<i class="ri-close-line"></i>'
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 4,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 5,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 6,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 7,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 8,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 9,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 10,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
+            }
+          },
+          {
+            "targets": 11,
+            "className": "text-center",
+            "render": function ( data, type, row, meta ) {
+              if (data === true) {
+                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+              } else {
+                return '<i class="ri-close-line"></i>'
+              }
             }
           }
       ],
