Test display icon in cell

--- a/index.html
+++ b/index.html
@@ -490,9 +490,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -501,9 +501,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -512,9 +512,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -523,9 +523,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -534,9 +534,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -545,9 +545,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -556,9 +556,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -567,9 +567,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           },
@@ -578,9 +578,9 @@
             "className": "text-center",
             "render": function ( data, type, row, meta ) {
               if (data === true) {
-                return '<i class="ri-check-line" style="color: #2a7837;"></i>'
+                return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-line"></i>'
+                return '<i class="ri-close-circle-fill"></i>'
               }
             }
           }
