Change color of false icon

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -503,7 +503,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -514,7 +514,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -525,7 +525,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -536,7 +536,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -547,7 +547,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -558,7 +558,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -569,7 +569,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           },
@@ -580,7 +580,7 @@
               if (data === true) {
                 return '<i class="ri-checkbox-circle-fill" style="color: #2a7837;"></i>'
               } else {
-                return '<i class="ri-close-circle-fill"></i>'
+                return '<i class="ri-close-circle-fill" style="color: #f13434;"></i>'
               }
             }
           }
