Change table style

--- a/index.html
+++ b/index.html
@@ -470,6 +470,7 @@
   <script text="text/javascript">
     $('#compatible-car').DataTable({
       "ajax": "data/car.json",
+      "scrollX": true,
       "columns": [
           { "data": "ma", "title": "Hãng xe" },
           { "data": "mo", "title": "Dòng xe" },
