Add two fixed column

--- a/index.html
+++ b/index.html
@@ -472,7 +472,7 @@
       "ajax": "data/car.json",
       "scrollX": true,
       "fixedColumns":   {
-        leftColumns: 2
+        "leftColumns": 2
       },
       "columns": [
           { "data": "ma", "title": "Hãng xe" },
