change icon of previos and next

--- a/index.html
+++ b/index.html
@@ -599,8 +599,8 @@
           "paginate": {
             "first":      "Trang đầu",
             "last":       "Trang cuối",
-            "next":       "Trang tiếp theo",
-            "previous":   "Trang trước"
+            "next":       '<i class="ri-arrow-right-s-line"></i>',
+            "previous":   '<i class="ri-arrow-left-s-line"></i>'
           },
       }
     });
