Adding vios compatible, change privacy link

--- a/index.html
+++ b/index.html
@@ -423,8 +423,8 @@
             <h4>Tiện ích</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Trang chủ</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://onroadvt.github.io/onroad/pdf/ThongTin_ChinhSach_CoChe.pdf">Điều khoản sử dụng</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="https://onroadvt.github.io/onroad/pdf/ThongTin_ChinhSach_CoChe.pdf">Chính sách, cơ chế</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://vcarvt.github.io/vcar/pdf/ThongTin_ChinhSach_CoChe.pdf">Điều khoản sử dụng</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="https://vcarvt.github.io/vcar/pdf/ThongTin_ChinhSach_CoChe.pdf">Chính sách, cơ chế</a></li>
             </ul>
           </div>
 
