--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>OnRoad by Viettel</title>
+  <title>VCar by Viettel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,7 +49,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>OnRoad</span></a></h1>
+        <h1><a href="index.html"><span>VCar</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -75,14 +75,15 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Trải nghiệm ô tô thông minh cùng với <span>OnRoad</span></h1>
-            <h2>Ứng dụng hỗ trợ quản lý, giám sát, cứu hộ, cứu nạn xe ô tô cá nhân mang đến cho bạn những chuyến đi tốt hơn, an toàn hơn</h2>
+            <h1>Trải nghiệm ô tô thông minh cùng với <span>VCar</span></h1>
+            <h2>VCAR là giải pháp kết nối thông minh dành cho ô tô mới ra mắt của Viettel, giúp số hóa mọi thông tin và hỗ trợ đắc lực cho trải nghiệm sử dụng ô tô của bạn. </h2>
+            <h2>Khách hàng có thể dễ dàng sử dụng để phát wifi, khám sức khỏe ô tô, phát hiện va chạm,... qua ứng dụng ngay trên điện thoại thông minh, luôn đảm bảo yên tâm trên mọi cung đường. Khách hàng có thể dễ dàng lắp đặt VCAR thông qua cổng OBD II trên ô tô.</h2>
             <div class="text-center text-lg-start">
-              <a href='https://apps.apple.com/us/app/onroad-vt/id1555423089'>
+              <a href='https://apps.apple.com/vn/app/vcar-tr%C3%AAn-m%E1%BB%8Di-h%C3%A0nh-tr%C3%ACnh/id1570755790'>
                 <img style="height: 7vh;" alt='Tải nội dung trên Apple Store' 
                     src='assets/img/latest.png'/>
               </a>
-              <a href='https://play.google.com/store/apps/details?id=com.vtnet.onroad.carmanagement&pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1'>
+              <a href='https://play.google.com/store/apps/details?id=com.viettel.vcar'>
                 <img style="height: 7vh;" alt='Tải nội dung trên Google Play' 
                     src='assets/img/googlepay_latest.png'/>
               </a>
@@ -267,15 +268,15 @@
 
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
-            <img src="assets/img/details-4.png" class="img-fluid" alt="">
+            <img src="assets/img/details-4.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Và hàng loạt những tính năng tiện ích khác</h3>
             <p>
-              Hãy cùng chúng tôi khám phá những tính năng, những trải nghiệm thông minh mà OnRoad đang chờ đón bạn.
+              Hãy cùng chúng tôi khám phá những tính năng, những trải nghiệm thông minh mà VCar đang chờ đón bạn.
             </p>
             <p>
-              OnRoad, sát cánh bên bạn trên từng chuyến đi.
+              VCar, sát cánh bên bạn trên từng chuyến đi.
             </p>
           </div>
         </div>
@@ -359,10 +360,10 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tôi có thể mua thiết bị OBD của OnRoad ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help" color="red"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tôi có thể mua thiết bị OBD của VCar ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Bạn có thể mua tại tại toàn bộ các cửa hàng Viettel Store hoặc liên hệ số điện thoại 19005151 (ext 1) để được hướng dẫn thêm
+                  Bạn có thể mua tại tại toàn bộ các cửa hàng Viettel Store hoặc liên hệ số điện thoại 18008168 để được hướng dẫn thêm
                 </p>
               </div>
             </li>
@@ -371,7 +372,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Tôi có thể download ứng dụng ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Ứng dụng đã được upload lên Apple Store và Google Play. Bạn có thể lên hai chợ ứng dụng này và tìm kiếm theo từ khóa "OnRoad".
+                  Ứng dụng đã được upload lên Apple Store và Google Play. Bạn có thể lên hai chợ ứng dụng này và tìm kiếm theo từ khóa "VCar - Trên mọi hành trình".
                 </p>
               </div>
             </li>
@@ -380,7 +381,7 @@
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Tôi muốn được hướng dẫn sử dụng ứng dụng? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Bạn có thể tải hướng dẫn sử dụng ứng dụng tại link: https://onroad.viettel.vn/hdsd hoặc  liên hệ số điện thoại 19005151 (ext 2) để được hướng dẫn.
+                  Bạn có thể tải hướng dẫn sử dụng ứng dụng tại link: https://viettel.vn/vcar/#huongdan hoặc  liên hệ số điện thoại 180080000 để được hướng dẫn.
                 </p>
               </div>
             </li>
@@ -401,7 +402,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>OnRoad</h3>
+              <h3>VCar</h3>
               <p class="pb-3"><em>Một sản phẩm được phát triển bởi Viettel Networks.</em></p>
               <p class="pb-3">
                 Cơ quan chủ quản: Tập đoàn Công nghiệp - Viễn thông Quân đội.
