--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>VCar by Viettel</title>
+  <title>XSign by Viettel</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -49,7 +49,7 @@
     <div class="container d-flex align-items-center justify-content-between">
 
       <div class="logo">
-        <h1><a href="index.html"><span>VCar</span></a></h1>
+        <h1><a href="index.html"><span>XSign</span></a></h1>
         <!-- Uncomment below if you prefer to use an image logo -->
         <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
       </div>
@@ -59,8 +59,8 @@
           <li><a class="nav-link scrollto active" href="#hero">Trang chủ</a></li>
           <li><a class="nav-link scrollto" href="#about">Tổng quan</a></li>
           <li><a class="nav-link scrollto" href="#features">Tính năng</a></li>
-          <li><a class="nav-link scrollto" href="#compatible">Tương thích</a></li>
-          <li><a class="nav-link scrollto" href="#gallery">Thư viện</a></li>
+          <!-- <li><a class="nav-link scrollto" href="#compatible">Tương thích</a></li> -->
+          <li><a class="nav-link scrollto" href="#faq">Câu hỏi thường gặp</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -75,14 +75,14 @@
       <div class="row justify-content-between">
         <div class="col-lg-7 pt-5 pt-lg-0 order-2 order-lg-1 d-flex align-items-center">
           <div data-aos="zoom-out">
-            <h1>Trải nghiệm ô tô thông minh cùng với <span>VCar</span></h1>
-            <h2>VCAR là giải pháp kết nối thông minh dành cho ô tô mới ra mắt của Viettel, giúp số hóa mọi thông tin và hỗ trợ đắc lực cho trải nghiệm sử dụng ô tô của bạn. </h2>
-            <h2>Khách hàng có thể dễ dàng sử dụng để phát wifi, khám sức khỏe ô tô, phát hiện va chạm,... qua ứng dụng ngay trên điện thoại thông minh, luôn đảm bảo yên tâm trên mọi cung đường. Khách hàng có thể dễ dàng lắp đặt VCAR thông qua cổng OBD II trên ô tô.</h2>
+            <h1>Thu thập biển báo thông minh cùng với <span>XSign</span></h1>
+            <h2>XSign là giải pháp thu thập biển báo thông minh được phát triển bởi đội ngũ kỹ sư hàng đầu của Viettel (X Team), giúp số hóa mọi thông tin và hỗ trợ đắc lực cho quá trình thu thập biển báo. </h2>
+            <h2>Sử dụng XSign, người dùng có thể thu thập biển báo một cách nhanh chóng, tiện lợi và tránh sai sót.</h2>
             <div class="text-center text-lg-start">
-              <a href='https://apps.apple.com/vn/app/vcar-tr%C3%AAn-m%E1%BB%8Di-h%C3%A0nh-tr%C3%ACnh/id1570755790'>
+              <!-- <a href='https://apps.apple.com/vn/app/vcar-tr%C3%AAn-m%E1%BB%8Di-h%C3%A0nh-tr%C3%ACnh/id1570755790'>
                 <img style="height: 7vh;" alt='Tải nội dung trên Apple Store' 
                     src='assets/img/latest.png'/>
-              </a>
+              </a> -->
               <a href='https://play.google.com/store/apps/details?id=com.viettel.vcar'>
                 <img style="height: 7vh;" alt='Tải nội dung trên Google Play' 
                     src='assets/img/googlepay_latest.png'/>
@@ -125,25 +125,25 @@
           </div>
 
           <div class="col-xl-7 col-lg-6 icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Quản lý hành trình thông minh</h3>
+            <h3>Quản lý dữ liệu biển báo thông minh</h3>
             <!-- <p>Giúp bạn dễ dàng quản lý hành trình của cá nhân, nhận những thông tin liên quan đến sức khoẻ xe.</p> -->
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="bx bx-fingerprint"></i></div>
-              <h4 class="title"><a href="">Bảo mật</a></h4>
-              <p class="description">Chúng tôi tôn trọng mọi quyền riêng tư của các bạn chính vì thế mọi dữ liệu của bạn đều được bảo mật.</p>
+              <h4 class="title"><a href="">Tiện lợi</a></h4>
+              <p class="description">Thực hiện thu thập biển báo một cách dễ dàng chỉ bằng các thao tác lựa chọn. Người dùng không cần phải nhập bằng tay bất cứ thao tác nào.</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i class="ri-calendar-todo-line"></i></div>
-              <h4 class="title"><a href="">Theo dõi các sự kiện</a></h4>
-              <p class="description">Thông báo/ cảnh báo cho người dùng các sự kiện liên quan đến xe như xe có rung lắc khi tắt máy, xe di chuyển khi tắt máy (bị công an cẩu đi…), điện áp ắc quy giảm khi tắt máy, xe chạy quá tốc độ của cung đường...</p>
+              <h4 class="title"><a href="">Quản lý dễ dàng</a></h4>
+              <p class="description">Toàn bộ các thông tin về người dùng, hành trình, dữ liệu biển tương ứng đều được lưu lại và quản lý trực quan.</p>
             </div>
 
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="bx bx-atom"></i></div>
               <h4 class="title"><a href="">Chính xác</a></h4>
-              <p class="description">Cho phép người dùng định vị xe theo thời gian thực trên nền bản đồ Google đồng thời có thể giám sát các thông số kỹ thuật của xe theo thời gian thực.</p>
+              <p class="description">Các thông tin cần được thu thập như vị trí, hướng biển, loại biển, giá trị biển đều được số hóa, cho phép người dùng giảm thiểu những sai sót có thể trong quá trình nhập liệu bằng tay.</p>
             </div>
 
           </div>
@@ -164,29 +164,29 @@
         <div class="row" data-aos="fade-left">
           <div class="col-lg-3 col-md-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="50">
-              <i class="ri-store-line" style="color: #ffbb2c;"></i>
-              <h3><a href="#">Theo dõi hành trình</a></h3>
+              <i class="ri-store-line" style="color: #fff;"></i>
+              <h3><a href="#">Quản lý lịch sử hành trình</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="100">
-              <i class="ri-bar-chart-box-line" style="color: #5578ff;"></i>
-              <h3><a href="#">Thống kê di chuyển</a></h3>
+              <i class="ri-bar-chart-box-line" style="color: #fff;"></i>
+              <h3><a href="#">Quản lý lịch sử thu thập biển báo</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="150">
-              <i class="ri-calendar-todo-line" style="color: #e80368;"></i>
-              <h3><a href="#">Lịch sử hành trình</a></h3>
+              <i class="ri-calendar-todo-line" style="color: #fff;"></i>
+              <h3><a href="#">Tracking hành trình</a></h3>
             </div>
           </div>
           <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="200">
-              <i class="ri-paint-brush-line" style="color: #e361ff;"></i>
-              <h3><a href="#">Sức khoẻ xe</a></h3>
+              <i class="ri-paint-brush-line" style="color: #fff;"></i>
+              <h3><a href="#">Thêm mới, sửa, xóa dữ liệu biển báo</a></h3>
             </div>
           </div>
-          <div class="col-lg-3 col-md-4 mt-4">
+          <!-- <div class="col-lg-3 col-md-4 mt-4">
             <div class="icon-box" data-aos="zoom-in" data-aos-delay="250">
               <i class="ri-database-2-line" style="color: #47aeff;"></i>
               <h3><a href="#">Gợi ý trạm xăng</a></h3>
@@ -209,7 +209,7 @@
               <i class="ri-wifi-line" style="color: #5578ff;"></i>
               <h3><a href="#">Wifi hotspot</a></h3>
             </div>
-          </div>
+          </div> -->
         
         </div>
 
@@ -225,17 +225,17 @@
             <img src="assets/img/feature1.png" class="img-fluid" alt="">
           </div>
           <div class="col-md-8 pt-4" data-aos="fade-up">
-            <h3>Nhận cảnh báo trên từng sự kiện bạn gặp phải</h3>
+            <h3>Quản lý thông tin, dữ liệu</h3>
             <p class="fst-italic">
-              Cảnh báo giúp bạn nắm được tình trạng hiện tại của xe mình.
+              Cho phép bạn quản lý toàn bộ công việc thu thập biển báo của mình
             </p>
             <ul>
-              <li><i class="bi bi-check"></i> Cảnh báo vượt quá tốc độ giới hạn (trên từng khu vực).</li>
-              <li><i class="bi bi-check"></i> Cảnh báo xe bị va chạm khi đang tắt máy.</li>
-              <li><i class="bi bi-check fst-italic"></i> Cảnh báo khi xe gặp va chạm.</li>
-              <li><i class="bi bi-check"></i> Cảnh báo điện áp ắc quy yếu.</li>
-              <li><i class="bi bi-check"></i> Cảnh báo ra vào geo-fence cá nhân.</li>
-              <li><i class="bi bi-check"></i> Cảnh báo điện áp ắc quy yếu.</li>
+              <li><i class="bi bi-check"></i> Quản lý lịch sử hành trình đã di chuyển.</li>
+              <li><i class="bi bi-check"></i> Quản lý biển báo đã thu thập trên từng hành trình.</li>
+              <!-- <li><i class="bi bi-check fst-italic"></i> Quản lý vị trí.</li> -->
+              <li><i class="bi bi-check"></i> Hiển thị vị trí, biển báo theo thời gian thực trên bản đồ.</li>
+              <li><i class="bi bi-check"></i> Thêm mới, sửa, xóa biển báo với những thao tác lựa chọn tiện lợi, nhanh chóng</li>
+              <li><i class="bi bi-check"></i> Hỗ trợ tracking vị trí ngay cả khi bạn out khỏi ứng dụng.</li>
             </ul>
             <p>
               Và hàng loạt cảnh báo tiện ích thú vị khác.
@@ -243,7 +243,7 @@
           </div>
         </div>
 
-        <div class="row content">
+        <!-- <div class="row content">
           <div class="col-md-4 order-1 order-md-2" data-aos="fade-left">
             <img src="assets/img/feature3.png" class="img-fluid" alt="">
           </div>
@@ -264,7 +264,7 @@
             <p>Các hành vi lái xe (tăng tốc đột ngột, phanh gấp, cua gấp, vượt tốc độ giới hạn...) đồng thời quản lý lịch sử hành trình cũng như xem thông tin chi tiết về hành trình.
             </p>
           </div>
-        </div>
+        </div> -->
 
         <div class="row content">
           <div class="col-md-4" data-aos="fade-right">
@@ -273,10 +273,10 @@
           <div class="col-md-8 pt-4" data-aos="fade-up">
             <h3>Và hàng loạt những tính năng tiện ích khác</h3>
             <p>
-              Hãy cùng chúng tôi khám phá những tính năng, những trải nghiệm thông minh mà VCar đang chờ đón bạn.
+              Hãy cùng chúng tôi khám phá những tính năng, những trải nghiệm thông minh mà XSign đang chờ đón bạn.
             </p>
             <p>
-              VCar, sát cánh bên bạn trên từng chuyến đi.
+              XSign, sát cánh bên bạn trên từng chuyến đi.
             </p>
           </div>
         </div>
@@ -284,7 +284,7 @@
     </section><!-- End Details Section -->
 
       <!-- ======= Device Compatible Section ======= -->
-    <section id="compatible" class="gallery">
+    <!-- <section id="compatible" class="gallery">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -298,10 +298,10 @@
         </div>
 
       </div>
-    </section><!-- Device Compatible Section -->
+    </section>Device Compatible Section -->
 
     <!-- ======= Gallery Section ======= -->
-    <section id="gallery" class="gallery">
+    <!-- <section id="gallery" class="gallery">
       <div class="container">
 
         <div class="section-title" data-aos="fade-up">
@@ -346,7 +346,7 @@
         </div>
 
       </div>
-    </section><!-- End Gallery Section -->
+    </section>End Gallery Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq section-bg">
@@ -360,28 +360,28 @@
         <div class="faq-list">
           <ul>
             <li data-aos="fade-up">
-              <i class="bx bx-help-circle icon-help" color="red"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tôi có thể mua thiết bị OBD của VCar ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
+              <i class="bx bx-help-circle icon-help" color="red"></i> <a data-bs-toggle="collapse" class="collapse" data-bs-target="#faq-list-1">Tôi có thể cài đặt ứng dụng XSign ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-1" class="collapse show" data-bs-parent=".faq-list">
                 <p>
-                  Bạn có thể mua tại tại toàn bộ các cửa hàng Viettel Store hoặc liên hệ số điện thoại 18008168 để được hướng dẫn thêm
+                  XSign hiện chỉ hỗ trợ phiên bản Android, bạn có thể search trên Google Play Store với từ khóa "XSign" hoặc click vào link trên trang chủ.
                 </p>
               </div>
             </li>
 
-            <li data-aos="fade-up" data-aos-delay="100">
+            <!-- <li data-aos="fade-up" data-aos-delay="100">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-2" class="collapsed">Tôi có thể download ứng dụng ở đâu? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-2" class="collapse" data-bs-parent=".faq-list">
                 <p>
                   Ứng dụng đã được upload lên Apple Store và Google Play. Bạn có thể lên hai chợ ứng dụng này và tìm kiếm theo từ khóa "VCar - Trên mọi hành trình".
                 </p>
               </div>
-            </li>
+            </li> -->
 
             <li data-aos="fade-up" data-aos-delay="200">
               <i class="bx bx-help-circle icon-help"></i> <a data-bs-toggle="collapse" data-bs-target="#faq-list-3" class="collapsed">Tôi muốn được hướng dẫn sử dụng ứng dụng? <i class="bx bx-chevron-down icon-show"></i><i class="bx bx-chevron-up icon-close"></i></a>
               <div id="faq-list-3" class="collapse" data-bs-parent=".faq-list">
                 <p>
-                  Bạn có thể tải hướng dẫn sử dụng ứng dụng tại link: https://viettel.vn/vcar/#huongdan hoặc  liên hệ số điện thoại 180080000 để được hướng dẫn.
+                  Bạn có thể tải hướng dẫn sử dụng ứng dụng tại link: https://viettel.vn/xsign/#huongdan hoặc  liên hệ số điện thoại 180080000 để được hướng dẫn.
                 </p>
               </div>
             </li>
@@ -402,7 +402,7 @@
 
           <div class="col-lg-4 col-md-6">
             <div class="footer-info">
-              <h3>VCar</h3>
+              <h3>XSign</h3>
               <p class="pb-3"><em>Một sản phẩm được phát triển bởi Viettel Networks.</em></p>
               <p class="pb-3">
                 Cơ quan chủ quản: Tập đoàn Công nghiệp - Viễn thông Quân đội.
@@ -446,7 +446,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>OnRoad</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>X Team</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
